fix src logo & icon_play

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
     <meta name="author" content="Roman Kolpachev">
     <title>Путешествия по России</title>
 
-    <link rel="icon" href="<%=require('../images/Video/__icon_play.png')%>">
+    <link rel="icon" href="<%=require('../images/Video/icon_play.png')%>">
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
 <body>
     <div class="container">
     <div class="page">
         <header class="header">
-            <img class="logo header__logo" src="<%=require('../images/header/__logo.svg')%>" alt="логотип карты России">
+            <img class="logo header__logo" src="<%=require('../images/header/logo.svg')%>" alt="логотип карты России">
             <a class="header__link header__link_active" href="#">Ru</a>
             <a class="header__link" href="#">En</a>
         </header>
@@ -193,7 +193,7 @@
                     <a href="https://vimeo.com/81106671" target="_blank" class="video__link">
                         <div class="video__item">
                             <img src="<%=require('../images/Video/video__item_kamchatka.jpg')%>" alt="Красота Камчатки" class="video__image video__image_hover">
-                            <img src="<%=require('../images/Video/__icon_play.png')%>" alt="Play" class="video__pic-play">
+                            <img src="<%=require('../images/Video/icon_play.png')%>" alt="Play" class="video__pic-play">
                             <div class="video__discription">
                                 <p class="video__paragraph video__paragraph_time">6:30</p>
                                 <h3 class="content-title video__content-title_place">Colors of Kamchatka</h3>
@@ -205,7 +205,7 @@
                     <a href="https://vimeo.com/290675450" target="_blank" class="video__link">
                         <div class="video__item">
                             <img src="<%=require('../images/Video/video__item_observatory.jpg')%>" alt="Обсерватория" class="video__image video__image_hover">
-                            <img src="<%=require('../images/Video/__icon_play.png')%>" alt="Play" class="video__pic-play">
+                            <img src="<%=require('../images/Video/icon_play.png')%>" alt="Play" class="video__pic-play">
                             <div class="video__discription">
                                 <p class="video__paragraph video__paragraph_time">24:45</p>
                                 <h3 class="content-title video__content-title_place">Обсерватория | Observatory</h3>
